Fix naviation section overlapping

--- a/assets/src/scss/links.scss
+++ b/assets/src/scss/links.scss
@@ -1,13 +1,13 @@
 .links-group {
   height: 55px;
   min-height: 55px;
-  width: 94%;
   display: flex;
   flex-direction: row;
   border: 2px solid #ccc;
   margin: auto;
   cursor: pointer;
   overflow: visible;
+
 
   .links-subs {
     width: 17%;
@@ -22,11 +22,16 @@
 
     .title {
       height: 55px;
-      font-size: 26px;
+      font-size: 20px;
       line-height: 55px;
-      font-weight: 700;
+      font-weight: 300;
       color: darken(#ccc, 50%);
       border-bottom: 4px solid gray;
+      display: flex;
+      justify-content: space-around;
+      margin-left: -10px;
+      margin-right: -10px;
+
     }
 
     .link-list {
